# metroboy

./: .gitignore  .gitmodules  CMakeLists.txt  GateBoy.vcxproj  MetroBoy.code-workspace  MetroBoy.ruleset  MetroBoy.sln  MetroBoy.sublime-project  MetroBoy.sublime-workspace  MetroBoy.vcxproj  MetroLib.vcxproj  README  README.md  README2.md  Sandbox.vcxproj  TemporalProgramming.md  Traces.cpp  audio_test.txt  build.hancho  build.ninja  build.py  build.windows.ninja  celltest.txt  eyes.dump  failing test notes.cpp  gameboy.cell_db.json  gameboy.die_db.json  gameboy.plait  gameboy.plait.json  gateboy fails  gateboy_post_bootrom.raw.dump  gateboy_reset_to_cart.raw.dump  gb cpu ports.txt  makefile  minimal.s  oh_eyes.dump  oh_jelly.dump  plait_data.txt  scroller.dump  sprites.dump  (+3 more)
AppLib/: App.h  AppHost.cpp  AppHost.h  AppLib.vcxproj  Audio.cpp  Audio.h  Blitter.cpp  Blitter.h  BoardPainter.cpp  BoxPainter.cpp  BoxPainter.h  Console.cpp  DummyApp.cpp  DummyApp.h  DumpPainter.cpp  DumpPainter.h  GBBlitter.cpp  GBBlitter.h  GLBase.cpp  GLBase.h  GatePix.cpp  GridPainter.cpp  GridPainter.h  LinePainter.cpp  LinePainter.h  Terminus.cpp  TextPainter.cpp  TextPainter.h  Viewport.cpp  Viewport.h
CoreLib/: Assembler.cpp  Assembler.h  CPU.cpp  CPU.h  Config.h  Constants.cpp  Constants.h  CoreLib.vcxproj  Debug.cpp  Debug.h  File.cpp  File.h  MetroBoyCPU.cpp  MetroBoyCPU.h  OpDecoder.h  Opcodes.h  SmoothTimer.h  StateManager.cpp  StateManager.h  StateManager2.cpp  StateManager2.h  Tests.h  Types.cpp  Types.h  Z80.cpp  Z80.h
GBSchematic/: APU.cpp  APU.h  APU_Ch1.cpp  AddressDecoder.h  (+112 more)
(+2507 files in other folders)
